--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 streamlit==1.39.0
-pandas==2.0.3
+pandas==1.5.3
 requests==2.31.0
 python-dotenv==1.0.0
-protobuf==4.24.4
+protobuf==4.21.12
+numpy==1.24.3
